# student-theatre-web-database

./: LICENSE
catalog/: build.py  catalog_context.py  config.py  dates.py  export.py  plugin_support.py  schema.sql  verify_roundtrip.py
config/: instance.example.yaml
datasette-worker/: pyproject.toml  wrangler.toml
datasette-worker/src/: entry.py
plugins/: entity_lookup.py  index_vars.py  menu_links.py  redirects.py  template_functions.py
scripts/: bundle-datasette-worker.sh  bundle.sh
static/: catalog.css
templates/: _entity_organisation.html  _entity_person.html  _entity_production.html  _entity_venue.html  index.html
templates/pages/: {id}.html
